# cmd/server/docs/swagger.yaml
@@ -70,6 +70,23 @@ paths:
       tags:
       - health
   /tasks:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.TaskListItem'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/phttp.ErrorResponse'
+      summary: Получить список всех задач
+      tags:
+      - tasks
     post:
       description: Инициализирует задачу со статусом Pending и возвращает её с сгенерированным
         ID
@@ -157,24 +174,6 @@ paths:
           schema:
             $ref: '#/definitions/phttp.ErrorResponse'
       summary: Отменить задачу
-      tags:
-      - tasks
-  /tasks/all:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/domain.TaskListItem'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/phttp.ErrorResponse'
-      summary: Получить список всех задач
       tags:
       - tasks
   /tasks/filter:
